--- a/index.html
+++ b/index.html
@@ -1,80 +1,54 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Lanchonete do Coral 55</title>
   <link rel="stylesheet" href="estilo.css">
-  <link rel="shortcut icon" href="images/siri.png">
 </head>
 <body>
-  <div id="recipiente">
-    <header id="cabecalho-pagina">
-      <h1>Lanchonete do Coral 55</h1>
-      <h2>O melhor <strong>açaí</strong> marítimo da região</h2>
+  <main id="recipiente">
+    <header>
+      <h1>Lanchonete do Coral</h1>
+      <h2>O melhor <em>açaí</em> marítimo da região</h2>
     </header>
-    <section id="lateral">
-      <img id="siri" src="images/siri.png" alt="Desenho de um siri feliz">
-      <img id="bolhas" src="images/bolhas.png" alt="Bolhas de ar">
-      <img id="peixe" src="images/peixe.png" alt="Desenho de um peixe feliz">
-    </section>
-    <main id="cardapio">
-      <h3>Salgados</h3>
-      <article>
-        <span>Pão de queijo de égua marinha</span>
-        <span>$ 0,99</span>
-      </article>
-      <article>
-        <span>Hambúrguer de microinsetos com salada de algas ou de musgo</span>
-        <span>$ 2,49</span>
-      </article>
-      <h3>Pratos</h3>
-      <article>
-        <span>Açaí do manguezal 500ml</span>
-        <span>$ 4,99</span>
-      </article>
-      <article>
-        <span>Açaí marítimo (assinatura) 500ml</span>
-        <span>$ 6,99</span>
-      </article>
-      <article>
-        <span>Algas verdes fritas</span>
-        <span>$ 7,49</span>
-      </article>
-      <article>
-        <span>Plâncton ao molho de maracujá</span>
-        <span>$ 12,49</span>
-      </article>
-      <article>
-        <span>Plâncton do pacífico (importado) marinado</span>
-        <span>$ 19,99</span>
-      </article>
-      <h3>Bebes</h3>
-      <article>
-        <span>Água temperada</span>
-        <span>(cortesia)</span>
-      </article>
-      <article>
-        <span>Água doce importada (copo)</span>
-        <span>$ 29,49</span>
-      </article>
-      <article>
-        <span>Coquetel de algas (alcoólico)</span>
-        <span>$ 8,99</span>
-      </article>
-      <article>
-        <span>Coquetel de algas (kids)</span>
-        <span>$ 5,49</span>
-      </article>
-    </main>
-    <footer id="rodape-pagina">
-      <img src="images/cartoes.png" alt="Bandeiras dos cartões Visa e Mastercard">
+    <article>
+      <section id="lateral">
+        <img src="images/siri.png" alt="Um siri feliz após comer na lanchonete">
+        <h2>Cardápio</h2>
+        <img src="images/bolhas.png" alt="Bolhas de ar">
+        <img src="images/peixe.png" alt="Peixe feliz após beber um delicioso
+          coquetel de algas">
+      </section>
+      <div id="cardapio">
+        <h3>Salgados</h3>
+        <ul>
+            <li>Pão de queijo de égua marinha <span class="preço">$ 0,99</span></li>
+            <li>Hamburguer de microinsetos com salada de algas ou de musgo <span class="preço">$ 2,49</span></li>
+        </ul>
+        <h3>Pratos</h3>
+        <ul>
+            <li>Açaí do manguezal 500ml <span class="preço">$ 4,99</span></li>
+            <li>Açaí marítimo (assinatura) 500ml <span class="preço">$ 6,99</span></li>
+            <li>Algas verdes fritas <span class="preço">$ 7,49</span></li>
+            <li>Plâncton ao molho de maracujá <span class="preço">$ 12,49</span></li>
+            <li>Plâncton do pacífico (importado) marinado <span class="preço">$ 19,99</span></li>
+        </ul>
+        <h3>Bebes</h3>
+        <ul>
+            <li>Água temperada <span class="preço">(cortesia)</span></li>
+            <li>Água doce importada (copo) <span class="preço">$ 29,49</span></li>
+            <li>Coquetel de algas (alcoólico) <span class="preço">$ 8,99</span></li>
+            <li>Coquetel de algas (kids) <span class="preço">$ 5,49</span></li>
+        </ul>
+      </div>
+    </article>
+    <footer>
+      <img src="images/cartoes.png" alt="Formas de pagamento: Visa e Masterard">
     </footer>
-  </div>
-  <!--
-  <aside id="ticket">
+</main>
+<aside id="ticket">
     <img src="images/ticket.png" alt="Cupom de desconto">
-  </aside>
-  -->
+</aside>
+<script src="js/bubbles.js" charset="utf-8"></script>
 </body>
-
 </html>
